menu wrapping fixed css

--- a/AxelsBud/MyCss/cssGrid.css
+++ b/AxelsBud/MyCss/cssGrid.css
@@ -100,10 +100,37 @@
     text-decoration:none !important;
 }
 
+.menu_item_selected {
+    font-weight:bold;
+}
+
 
 @media (max-width: 1200px) {
     .content_container {
         width: 100%;
+    }
+    .content_container_wrapper {
+        flex-direction: column;
+    }
+    .menu_list {
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: space-around;
+        margin-bottom: 2rem;
+        border-bottom: 1px black solid;
+    }
+
+    .menu_container {
+        padding:2rem;
+    }
+
+    .menu_title {
+        width: 100%;
+    }
+    .menu_item > div {
+        border-radius: 0;
+        padding: 1rem;
     }
 }
 
